[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "nucleofind"
version = "0.5"
description = "NucleoFind"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jordan Dialpuri", email = "jordan.dialpuri@york.ac.uk" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]
dependencies=[
    "onnxruntime",
    "tqdm",
    "gemmi"
]
[project.urls]
Homepage = "https://github.com/Dialpuri/NucleoFind"

[project.scripts]
nucleofind = "nucleofind.predict:run"
nucleofind-install="nucleofind.install:run"
nucleofind-clean="nucleofind.clean:run"
nucleofind-build="nucleofind.build:main"

[tool.ruff]
target-version = "py37"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
before-all = "uname -a"
skip = ["pp*"] # Skip CPython and PyPy 3.8
archs = ["auto64"]          # Only target 64 bit architectures

# Run pytest to ensure that the package was correctly built
#test-command = "pytest {project}/tests"
#test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
